@@ -1,6 +1,15 @@
 2019-03-11  Martin Liska  <mliska@suse.cz>
 
 	Backport from mainline
+	2019-03-08  Martin Liska  <mliska@suse.cz>
+
+	PR target/86952
+	* config/i386/i386.c (ix86_option_override_internal): Disable
+	jump tables when retpolines are used.
+
+2019-03-11  Martin Liska  <mliska@suse.cz>
+
+	Backport from mainline
 	2019-02-11  David Malcolm  <dmalcolm@redhat.com>
 
 	PR lto/88147
